# 
# MIT License
# 
# Copyright (c) 2022 AtomicGamer9523
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# 
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
# 

[package]
authors = ["AtomicGamer9523@github.com"]
name = "uart_16550"
version = "0.2.18"
description = "Minimal support for uart_16550 serial output."
license = "MIT"
repository = "https://github.com/rust-osdev/uart_16550"
edition = "2018"

[dependencies]
bitflags = "1.1.0"
rustversion = "1.0.5"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.14.9", default-features = false, features = ["instructions"] }

[features]
default = []
# TOOD: Remove these deprecated features on next breaking release
stable = []
nightly = []